# amarrmb-personaplex

./: .env.example  .gitignore  README-v2.md  README.md
docker/: Dockerfile.brain  Dockerfile.gateway  Dockerfile.triton  docker-compose.yaml
docs/: user_manual.md
gateway/: CMakeLists.txt
gateway/src/: audio_utils.cpp  audio_utils.h  brain_client.cpp  brain_client.h  config.h  main.cpp  orchestrator.cpp  orchestrator.h  protocol.cpp  protocol.h  session.cpp  session.h  triton_client.cpp  triton_client.h
model_repository/brain/: config.pbtxt
model_repository/brain/1/: model.py
model_repository/lavasr_v2/: config.pbtxt
model_repository/lavasr_v2/1/: model.py
model_repository/mimi_decoder/: config.pbtxt
model_repository/mimi_decoder/1/: model.py
model_repository/mimi_encoder/: config.pbtxt
model_repository/mimi_encoder/1/: model.py
model_repository/mixtral_brain/: config.pbtxt
model_repository/mixtral_brain/1/: model.py
model_repository/personaplex_lm/: config.pbtxt
model_repository/personaplex_lm/1/: model.py
model_repository/personaplex_pipeline/: config.pbtxt
model_repository/personaplex_pipeline/1/: model.py
moshi/moshi/: server.py
scripts/: build_mixtral_engine.sh  export_lavasr.py  export_lavasr.sh  export_mimi.py  server_brain.py  start_mps.sh  start_triton.sh  stop_mps.sh
tools/: brain_client.py  check_voices.py  decode_transcript.py  test_brain.py  test_client.py
